--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1226,6 +1226,10 @@ span.dsa-event-textmonth, span.dsa-event-textday, span.dsa-event-address {
 font-color:  var(--color-sdsa-black-light);
 }
 
+.single-tribe_events .tribe-events .tribe-events-c-subscribe-dropdown .tribe-events-c-subscribe-dropdown__content, .tribe-block__events-link .tribe-events .tribe-events-c-subscribe-dropdown .tribe-events-c-subscribe-dropdown__content {
+  position: unset;
+}
+
 /*********************
 22b WP Jobs Manager
 *********************/
